--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Energi">
+        android:theme="@style/Theme.Energi"
+        android:usesCleartextTraffic="true"
+        >
         <activity
             android:name=".SecondActiviti"
             android:exported="true" />
